kubernetes/staffing-frontend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: staffing-frontend-deployment
  labels:
    app: staffing-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: staffing-frontend
  template:
    metadata:
      labels:
        app: staffing-frontend
      # annotations:
        # dapr.io/enabled: 'true'
        # dapr.io/app-id: staffing-frontend
        # dapr.io/app-port: '80'
        # dapr.io/config: 'tracing'
    spec:
      containers:
      - name: staffing-frontend
        image: roelvandegrint/cluster_demo_frontend:0.1.0
        ports:
        - containerPort: 80
