kubernetes/contour.proxy.yml
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: root
  namespace: default  
spec:
  virtualhost:
    fqdn: roelvandegrint.local
  routes:
  - conditions:
    - prefix: /
    enableWebsockets: true
    services:
      - name: frontend
        port: 80
