kubernetes/frontend.ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: staffing-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/use-regex: "true"
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  tls:
  - hosts:
    - staffing.captoso.eu
    secretName: tls-secret
  rules:
  - host: staffing.captoso.eu
    http:
      paths:
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
# ---
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: hello-world-ingress-static
#   annotations:
#     kubernetes.io/ingress.class: nginx
#     nginx.ingress.kubernetes.io/rewrite-target: /static/$2
#     nginx.ingress.kubernetes.io/use-regex: "true"
#     cert-manager.io/cluster-issuer: letsencrypt
# spec:
#   tls:
#   - hosts:
#     - hello-world-ingress.captoso.eu
#     secretName: tls-secret
#   rules:
#   - host: hello-world-ingress.captoso.eu
#     http:
#       paths:
#       - path: /static(/|$)(.*)
#         pathType: Prefix
#         backend:
#           service:
#             name: aks-helloworld-one
#             port: 
#               number: 80
