kubernetes/signalrchat.deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: signalrchat
  labels:
    app: signalrchat
spec:
  replicas: 1
  selector:
    matchLabels:
      app: signalrchat
  template:
    metadata:
      labels:
        app: signalrchat
    spec:
      containers:
      - name: signalrchat
        image: roelvandegrint/cluster_demo_signalrchat:latest
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: signalrchat
  name: signalrchat
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: signalrchat
  sessionAffinity: None
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: signalrchat
  labels:
    app: signalrchat
spec:
  defaultBackend:
    service:
      name: signalrchat
      port:
        number: 80
